# raylib-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat
src/: main.cpp
